fix: now trying to clip overflow

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h3 {
     height: 80px;
     padding: 0px;
     margin: 0px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     font-family: 'Nanum Gothic', sans-serif;
     perspective: 200px;
     transform-style: preserve-3d;
